--- a/FsSnowGlobe/MainWindow.xaml
+++ b/FsSnowGlobe/MainWindow.xaml
@@ -2,63 +2,98 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:ViewModels;assembly=FsSnowGlobe"
-    xmlns:converters="clr-namespace:Converters;assembly=FsSnowGlobe"
+    xmlns:events="clr-namespace:Events;assembly=FsSnowGlobe"
     xmlns:fsxaml="http://github.com/fsprojects/FsXaml"
     xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
-    Title="F# Snow Globe" Height="600" Width="800" WindowStyle="None" AllowsTransparency="True" Background="Transparent" >
+    fsxaml:ViewController.Custom="{x:Type local:MainViewController}"
+    Title="F# Advent 2015 - Snow Globe" Height="720" Width="1280" WindowStyle="SingleBorderWindow" ResizeMode="CanMinimize" Background="Black" >
     <Window.DataContext>
-        <local:GlobeViewModel/>
+        <local:GlobeViewModel />
     </Window.DataContext>
     <Window.Resources>
-        <converters:MoveConverter x:Key="moveConverter" />
+        <events:MoveConverter x:Key="moveConverter" />
+        <events:MouseConverter x:Key="mouseConverter" />
+        <BooleanToVisibilityConverter x:Key="boolVis" />
     </Window.Resources>
-    <Grid>
+    <Grid Background="Black">
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="MouseMove">
-                <fsxaml:EventToCommand Command="{Binding MouseCommand}" EventArgsConverter="{StaticResource moveConverter}" />
+                <fsxaml:EventToCommand Command="{Binding MouseCommand}" EventArgsConverter="{StaticResource mouseConverter}" />
             </i:EventTrigger>
         </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <Canvas Grid.Row="0" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Name="Layer_1" Width="800" Height="600" Canvas.Left="0" Canvas.Top="0" Margin="0,0,0,0">
-            <Path Width="801" Height="601" Canvas.Left="-0.500007" Canvas.Top="-0.5" Stretch="Fill" StrokeLineJoin="Round" Stroke="#1AAF922A" Data="F1 M 0,600C 0,600 -0.663981,-6.10352e-005 399.668,0C 800,6.10352e-005 800,600 800,600L 0,600 Z ">
-                <Path.Fill>
-                    <RadialGradientBrush RadiusX="0.50104" RadiusY="0.668053" Center="0.499585,0.5" GradientOrigin="0.499585,0.5">
-                        <RadialGradientBrush.GradientStops>
-                            <GradientStop Color="#1AFFFFFF" Offset="0.508621"/>
-                            <GradientStop Color="#1ABAE0FF" Offset="0.790655"/>
-                            <GradientStop Color="#1A76C1FF" Offset="1"/>
-                        </RadialGradientBrush.GradientStops>
-                        <RadialGradientBrush.RelativeTransform>
-                            <TransformGroup/>
-                        </RadialGradientBrush.RelativeTransform>
-                    </RadialGradientBrush>
-                </Path.Fill>
-            </Path>
-            <Grid Grid.Row="0" Width="800" Height="28" VerticalAlignment="Bottom" Canvas.Top="573.578">
-                <Rectangle Width="800" Height="28" Stretch="Fill" Margin="0,-3,0,3">
-                    <Rectangle.Fill>
-                        <LinearGradientBrush StartPoint="5.08626e-008,0.500001" EndPoint="1,0.500001">
-                            <LinearGradientBrush.GradientStops>
-                                <GradientStop Color="#FF502B07" Offset="0"/>
-                                <GradientStop Color="#FF8D6034" Offset="0.456897"/>
-                                <GradientStop Color="#FFCB9662" Offset="0.508621"/>
-                                <GradientStop Color="#FF8D6034" Offset="0.560345"/>
-                                <GradientStop Color="#FF502B07" Offset="1"/>
-                            </LinearGradientBrush.GradientStops>
-                        </LinearGradientBrush>
-                    </Rectangle.Fill>
-                </Rectangle>
-                <Grid Margin="0,-2,0,2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="28" />
-                    </Grid.ColumnDefinitions>
-                    <Button Grid.Column="1" Background="#50FFFFFF" FontSize="16" FontWeight="Bold" Height="24" Width="24" Command="{Binding ExitCommand}">X
-                    </Button>
-                </Grid>
-            </Grid>
-        </Canvas>
+        
+        <Image Source="{Binding BackgroundImageSource}" Width="1280" Height="720"  RenderOptions.BitmapScalingMode="HighQuality" />
+        <Border Background="#AA555555" Opacity="0.7" />
+        
+        <ItemsControl ItemsSource="{Binding MistParticles}">
+            
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Grid.Row="0" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                x:Name="Canvas2" Width="1280" Height="720" Canvas.Left="0" Canvas.Top="0" Margin="0,0,0,0" Background="Transparent" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate >
+                    <Image Source="Mist.png" Width="256" Height="256" Opacity="0.3"  />
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemContainerStyle>
+                <Style>
+                    <Setter Property="Image.Visibility" Value="{Binding Visible, Converter={StaticResource boolVis}}"  />
+                    <Setter Property="Canvas.Left" Value="{Binding Path=X}" />
+                    <Setter Property="Canvas.Top" Value="{Binding Path=Y}" />
+                    <Setter Property="Image.Opacity" Value="{Binding Alpha}" />
+                    <Setter Property="Image.RenderTransformOrigin" Value="0.5,0.5" />
+                    <Setter Property="Image.RenderTransform">
+                        <Setter.Value>
+                            <TransformGroup>
+                                <RotateTransform  Angle="{Binding Rotation}" /> 
+                                <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}"  />
+                            </TransformGroup>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+        </ItemsControl>
+
+        <ItemsControl ItemsSource="{Binding Particles}">
+            
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Canvas Grid.Row="0" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                x:Name="Canvas" Width="1280" Height="720" Canvas.Left="0" Canvas.Top="0" Margin="0,0,0,0" Background="Transparent" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Image Source="SnowFlake.png" Width="8" Height="8">
+                        <Image.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}"  />
+                                <RotateTransform Angle="{Binding Rotation}" />
+                            </TransformGroup>
+                        </Image.RenderTransform>
+                    </Image>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemContainerStyle>
+                <Style>
+                    <Setter Property="Image.Visibility" Value="{Binding Visible, Converter={StaticResource boolVis}}"  />
+                    <Setter Property="Canvas.Left" Value="{Binding Path=X}" />
+                    <Setter Property="Canvas.Top" Value="{Binding Path=Y}" />
+                    
+
+                </Style>
+            </ItemsControl.ItemContainerStyle>
+        </ItemsControl>
+
+        <DockPanel Background="#01000000">
+            <Label Visibility="Visible" Name="FrameRateLabel" DockPanel.Dock="Top" Foreground="Green"  Content="{Binding Fps}"/>
+        </DockPanel>
+        <Button Command="{Binding LoadImage}" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent" Foreground="#AA777777">Load Background Image</Button>
     </Grid>
 </Window>
